# Mald

./: README.md  pyproject.toml  quickstart.ipynb
.ipynb_checkpoints/: quickstart-checkpoint.ipynb
data/examples/: X_0.csv  Xk_0.csv  y_0.csv
docs/doctrees/: environment.pickle  importance.doctree  index.doctree  nnImportance.doctree  superBasicNetworks.doctree
docs/html/: .buildinfo  genindex.html  importance.html  index.html  nnImportance.html  objects.inv  py-modindex.html  search.html  searchindex.js  superBasicNetworks.html
docs/html/_sources/: importance.rst.txt  index.rst.txt  nnImportance.rst.txt  superBasicNetworks.rst.txt
maldImportance/: __init__.py  importance.py  nnImportance.py  superBasicNetworks.py
